iteration on offshore poster

--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -163,7 +163,6 @@
 %            state={Hovedstaden},
 %            country={Denmark}}
 
-
 %% Abstract
 \begin{abstract}
 %% Text of abstract
@@ -206,8 +205,8 @@ Large Neighborhood Search \sep Actor Framework \sep Maintenance scheduling \sep 
 
 \bibliography{refs}
 
+\usepackage{natbib}
 \bibliographystyle{elsarticle-harv}
 \end{document}
 
-hello
 \endinput
