--- a/tex/research_questions.tex
+++ b/tex/research_questions.tex
@@ -1,5 +1,5 @@
 
-  \begin{enumerate}[label=\arabic*.]
+  \begin{enumerate}[]
     \item How to implement a scheduling system that can coordinate in real-time?
 	\item How to coordinate multiple stakeholders in real-time that has different mathematical model requirements?
 	\item How to synchronize state across a high number of metaheuristics spread across different CPU threads?
