--- a/tex/research_questions.tex
+++ b/tex/research_questions.tex
@@ -1,12 +1,7 @@
+\begin{enumerate}[]
+	\item How to create modular algorithm components that can solve well defined decision problems while also integrating into a larger decision making process?
+    \item What approaches can be used to implement a real-time scheduling system that coordinates multiple agents, each utilizing different mathematical models and metaheuristics?
+    \item In what ways can metaheuristics be integrated into existing scheduling workflows and business IT infrastructures, such as ERP systems, to address complex operational problems involving multiple stakeholders?
+    \item How to model a scheduling process where each decision affects the process itself?
+\end{enumerate}
 
-  \begin{enumerate}[]
-    \item How to implement a scheduling system that can coordinate in real-time?
-	\item How to coordinate multiple stakeholders in real-time that has different mathematical model requirements?
-	\item How to synchronize state across a high number of metaheuristics spread across different CPU threads?
-	\item How to intergrate metaheuristics into the workflow of a working scheduler?
-    \item Can you coordinate metaheuristics based on different mathematical models in real-time?
-	\item Which modern software architecture should be used to create scalabily metaheuristic based scheduling systems
-	\item Which of the latest techniques in modern software development can be utilized to integrate metaheuristics directly into a business' IT infrastructure
-	\item How to create modular algorithm components that can solve well defined decision problems while also integrating into a larger decision making process
-	\item 
-  \end{enumerate}
